[package]
name = "kurtbuilds_fake"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "fake with a fluent interface"

[lib]
name = "fake"
path = "src/lib.rs"

[features]
uuid = ["fake/uuid"]
chrono = ["fake/chrono"]
derive = ["fake/derive"]
serde_json = ["fake/serde_json"]

[dependencies]
fake = { version = "3.1.0", features = ["derive", "chrono", "uuid"] }
