[package]
name = "kurtbuilds_fake"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "fake with a fluent interface"

[lib]
name = "fake"
path = "src/lib.rs"

[features]
uuid = ["libfake/uuid"]
chrono = ["libfake/chrono"]
derive = ["libfake/derive"]
serde_json = ["libfake/serde_json"]

[dependencies]
libfake = { version = "3.1.0", features = ["derive", "chrono", "uuid"], package = "fake" }
